2007.12.13: David Nichols
        * fixed tibae namespace handling for subprogram objects (backported from
	  trunk/0.7.0)

2007.09.25: David Nichols
	* fixed a memory bug in QoreString::parseBase64ToString()

2007.09.24: David Nichols
        * fixed a stupid memory bug in QoreString when instantiating from a
          boolean argument

2007.04.21: David Nichols
	* removed smp cache optimization for reference counting when no atomic
	  operation support is present

2007.04.03: David Nichols
	* fixed a bug in Hash::dereference() triggered by 
	  delete_all_thread_data()

2007.04.03: David Nichols
	* fixed encoding name matches to ignore case

2007.03.27: David Nichols
	* ported global variable overrides in tibae module to 0.6.1 branch

2007.02.19: David Nichols
	* implemented QoreSocket::readHTTPChunkedBodyBinary()
	* fixed deadlock in QoreHTTPClient.cc when a chunked read error occurs
	* detected misuse of Content-Encoding header to specify a character 
	  encoding

2007.02.12: David Nichols
	* enlarged buffer for host ip address lookups to 1024 bytes
	* fixed a bug setting the port number by protocol name in the 
	  HTTPClient class

2007.02.11: David Nichols
	* fixed a bug parsing escape sequences in JSON strings
	* implemented unicode numeric character code parsing in JSON strings 
	* updated documentation

2007.02.10: David Nichols
	* ensure that decompressed strings are null terminated and the length is
	  set properly and not calculated in case they contain binary data after
	  all

2007.02.09: David Nichols
	* fixed bugs in compressing/decomressing data larger than the default
	  buffer size
	* added "deflate" and "gzip" content-handling to the HTTPClient class

2007.02.08: David Nichols
	* added documentation for min() and max()
	* corrected some documentation typos
	* modified hextoint() to accept optionally leading '0x' or 'x' in front
	  of the string of hex digits
	* modified XML parsing to treat CDATA specially: put it in ^cdata^ hash